assets/css/style.css
body {
    background-image: url("../images/custom-handdrawn-bg.png");
    font-family: 'Open Sans', sans-serif;
}

header {
    font-family: 'Pangolin', cursive;
    color: #e83f00;
    text-align: center;
    padding: 20px 0 0 0;
    font-size: 4em;
    font-weight: bold;
    text-shadow: 2px 2px #eaecef;
}

.jumbotron {
    max-width: 580px;
    padding-top: 15px;
    position: relative;
    padding-bottom: 21px;
    box-shadow: 1px 1px #eddecd;
}

/* Timer Styling */

.timer-div {
    text-align: center;
    height:64px;
    width:64px;
    border-radius: 64px;
    border: 5px solid #e83f00;
    background-color: #eaecef;
    position: absolute; 
    top: 182px;
    right: 30px;
    z-index: 1;
}

#timer {
    font-weight: bold;
    margin-top: 3px;
    font-size: 2em;
    color: #084667;
}

.isHidden {
    display: none;
}

/* Questions Styling */

.questions-div {
    height: 200px;
    background-color: #e83f00;
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    color: #eaecef;
    font-size: 1.2em;
    margin-bottom: 30px;
    border-radius: 5px;
}

#questionsContainer {
    margin: 20px;
}

/* Choices Styling */

#choicesContainer {
    text-align: center;
}

.choices:hover {
    border: 5px solid #074567;
}

.choices {
    padding: 30px;
    margin: 10px;
    background-color: #3da3b3;
    color: #eaecef;
    border-radius: 5px; 
    font-size: 1.1em;
    border: 5px solid #eaecef;

}

.corrincorrect {
    margin-top: 10px;
    margin-bottom: 20px;
    border: 5px solid #eaecef;
    max-height: 305px;
    border: #084667 solid 5px;
}

/* Results Styling */

.selection {
    font-size: 1.1em;
    font-weight: bold;
    padding-top: 6px;
    padding-bottom: 6px;
}

.confirm {
    color: green;
    font-weight: bold;
    padding-top: 12px;
    padding-bottom: 24px;
}

.wrongSelection {
    text-decoration: line-through;
    padding-top: 6px;
    padding-bottom: 6px;
    font-weight: bold;
}

.reveal {
    color: red;
    font-weight: bold;
    font-size: 1.1em;
    padding-top: 12px;
    padding-bottom: 24px;
}

.timesUpReveal {
    margin-top: 30px;
    margin-bottom: 32px;
    font-weight: bold;
    padding-top: 6px;
    padding-bottom: 6px;
}

.confetti {
    max-height:350px;
    position: absolute; 
    top: 232px;
    left: 18px;
    opacity: 0.83;
}

.results, .startImage {
    margin-top: 10px;
    margin-bottom: 20px;
    max-height: 291px;
    /* max-width: 452px; */
    border: #084667 solid 5px;
}

.resultMessage {
    text-align: center;
    padding-top: 25px;
    font-size: 1.3em;
}

.playAgain, .startButton {
    margin-top: 40px;
    margin-bottom: 25px;
    width: 150px;
    padding: 10px 15px;
    border: #e83f00 solid 2px;
    font-weight: bold;
}

.playAgain:hover, .startButton:hover {
    background-color: #5ca1b1;
    color: #074567;
    border-color: #074567;
}

.results-stats {
    font-weight: bold;
    font-size: 1.5em;
    margin-top: 40px;
}

/* Sticker Styling */

.goodJob {
    height:128px;
    position: absolute; 
    top: 230px;
    left: 30px;
    z-index: 1;
}

.xout {
    height:128px;
    position: absolute; 
    top: 490px;
    right: 30px;
    z-index: 1;
}

.timesUp {
    height:128px;
    position: absolute; 
    top: 480px;
    left: 30px;
    z-index: 1;
}

/*
These rules take effect when the browser's width
is either 416px or less.
*/

@media screen and (max-width: 416px) {
    header {
        font-size: 3em;
    }

    .questions-div {
        margin: 0 0 16px 0;
    }

    .jumbotron {
        padding: 0 16px;
    }

    .startButton, .playAgain {
        margin: 0 auto 23px 0;
    }

    .choices {
        padding: 15px 30px;
        margin: 8px 5px;
    }

    .selection, .wrongSelection {
        padding-top: 0;
    }
    
    .confirm, .reveal {

        padding-top: 6px;
        padding-bottom: 12px;
    }

    .timer-div {
        top: 162px;
        right: 30px;
        z-index: 1;
    }

    .goodJob {
        height:100px;
        top: 220px;
        left: 0px;
    }

    .xout {
        height:100px;
        top: 370px;
        right: 0px;
        z-index: 1;
    }
    
    .timesUp {
        height:100px;
        top: 370px;
        left: 0px;
        z-index: 1;
    }

    .timesUpReveal {
            margin-top: 18px;
            margin-bottom: 20px;
            font-weight: bold;
            padding-top: 6px;
            padding-bottom: 6px;
        }
    
    .results {
        height: 202px;
    }

    .results-stats {
        margin-top: 15px;
    }

}

